# orchestration-pipelines

./: .gitignore  CHANGELOG.md  README.md  contributing.md  pyproject.toml  setup.py
docs/: code-of-conduct.md  doc.md
examples/: orchestration-pipeline-triggerer.yml  pipeline-bigquery-dts.py  pipeline-bigquery-dts.yml  pipeline-dataform-local.yml  pipeline-dataform-service.yml  pipeline-dataproc-create-batch-pyspark.yml  pipeline-dataproc-create-batch-resource-profile-gcs-overrides.yml  pipeline-dataproc-create-batch-resource-profile-gcs.yml  pipeline-dataproc-create-batch-resource-profile-relative.yml  pipeline-dataproc-create-batch.yml  pipeline-dataproc-ephemeral-gcs-resource-profile-overrides.yml  pipeline-dataproc-ephemeral-gcs-resource-profile-pyspark-overrides.yml  pipeline-dataproc-ephemeral-gcs-resource-profile-pyspark.yml  pipeline-dataproc-ephemeral-gcs-resource-profile.yml  pipeline-dataproc-ephemeral-inline-pyspark.yml  pipeline-dataproc-ephemeral-inline.yml  pipeline-dataproc-ephemeral-relative-resource-profile-pyspark.yml  pipeline-dataproc-ephemeral-relative-resource-profile.yml  pipeline-dataproc-existing-cluster-script-pyfiles.yml  pipeline-dataproc-existing-cluster-script.yml  pipeline-dbt.yml  pipeline-email-notification.yml  pipeline-python-script-with-pypi-dependencies.yml  pipeline-python-script.yml  pipeline-python-virtual-env.yml  pipeline-sql-on-bigquery.yml  pipeline-sql-on-dataproc-ephemeral-cluster.yml  pipeline-sql-on-dataproc-existing-cluster.yml  pipeline-sql-on-dataproc-gce-ephemeral.yml  pipeline-sql-on-dataproc-gce-existing.yml  (+2 more)
(+107 files in other folders)
